# fathom

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README 2.md  README.md  env.example  package.json  pnpm-lock.yaml  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/scripts/: release.py
.github/workflows/: checks.yml  commit-messages.yml  pr-title.yml  promote.yml  release-please-lockfile.yml  release-please.yml  release.yml  security.yml  staging.yml  supabase-pr.yml  supabase-prod.yml  supabase-staging.yml
app/: __init__.py  main.py  pipeline.py  validators.py  worker.py
app/api/: app.py  router.py  routes.py
app/api/routers/: jobs.py  meta.py  summaries.py
app/application/: guards.py  jobs.py  meta.py  summaries.py
app/core/: config.py  constants.py  errors.py  handlers.py  lifespan.py  logging.py  middleware.py
app/crud/supabase/: __init__.py  jobs.py  storage_objects.py  summaries.py  transcripts.py
app/orchestration/: runner.py
app/schemas/: jobs.py  summaries.py
app/services/: downloader.py  pdf.py  summarizer.py  supabase.py  supabase_helpers.py  transcriber.py  youtube.py
app/services/supabase/: __init__.py  helpers.py  supabase.py
apps/backend/fathom/: __init__.py
apps/backend/fathom/api/: __init__.py  app.py
apps/backend/fathom/api/routers/: __init__.py  billing.py  briefing_sessions.py  briefings.py  jobs.py  meta.py  summaries.py  webhooks.py
apps/backend/fathom/application/: __init__.py  billing.py  briefing_contract.py  briefing_sessions.py  briefings.py  guards.py  jobs.py  meta.py  summaries.py  usage.py
apps/backend/fathom/application/billing/: __init__.py  account.py  checkout.py  parsing.py  recovery.py  refunds.py  state.py  webhooks.py
apps/backend/fathom/application/briefings/: __init__.py  contract.py  sessions.py
apps/backend/fathom/application/diagnostics/: __init__.py  job_timeline.py  schemas.py
apps/backend/fathom/core/: config.py  constants.py  errors.py  handlers.py  lifespan.py  logging.py  middleware.py  rate_limits.py
apps/backend/fathom/crud/: __init__.py
apps/backend/fathom/crud/supabase/: billing.py  job_events.py  jobs.py  storage_objects.py  summaries.py  transcripts.py
apps/backend/fathom/orchestration/: jobs.py  observability.py  pipeline.py  runner.py  summaries.py  transcripts.py
apps/backend/fathom/schemas/: billing.py  briefing_sessions.py  briefings.py  jobs.py  meta.py  summaries.py
apps/backend/fathom/services/: downloader.py  pdf.py  polar.py  stripe.py  summarizer.py  transcriber.py
apps/backend/fathom/services/supabase/: __init__.py  helpers.py  postgres.py  supabase.py
apps/backend/fathom/tools/: __init__.py  job_timeline.py
apps/backend/tests/: __init__.py  test_billing_recovery.py  test_billing_refunds.py  test_billing_webhooks.py  test_briefing_contract.py  test_briefing_sessions.py  test_briefings.py  test_job_timeline.py  test_meta.py  test_middleware.py  test_rate_limits.py
apps/web/: components.json  env.example  next.config.mjs  package.json  proxy.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  legal.module.css  opengraph-image.tsx  page.module.css  page.tsx
apps/web/app/app/: app.module.css  home.module.css  layout.tsx  page.tsx
apps/web/app/app/account/: account.module.css  page.tsx
apps/web/app/app/billing/: billing.module.css  page.tsx
apps/web/app/app/briefings/: briefings.module.css  page.tsx  session.module.css  sessionState.test.mjs  sessionState.ts  sessionStream.ts
apps/web/app/auth/: auth.module.css
apps/web/app/components/: AppShellHeader.tsx  AppShellProvider.tsx  PricingSection.tsx  PricingToggleSection.tsx  SmoothScrollLink.tsx  StreamingMarkdown.tsx  app-chrome.module.css  app-shell-header.module.css  pricing-toggle-section.module.css
apps/web/app/content/: landing.ts  pricing.ts
apps/web/app/lib/: accountLabel.ts  apiErrors.ts  appDataCache.ts  authErrors.ts  briefings.ts  format.ts  logger.ts  marketingEvents.ts  supabaseClient.ts  supabaseConfig.ts  supabaseServer.ts  url.ts
apps/web/app/pricing/: page.tsx  pricing.module.css
apps/web/app/privacy/: page.tsx
apps/web/app/signin/: page.tsx
apps/web/app/signup/: page.tsx
apps/web/app/terms/: page.tsx
docs/runbooks/: worker-and-billing-incidents.md
scripts/: ty_check.sh
scripts/polar/: generate_polar_plans.py  plans.json
scripts/stripe/: generate_stripe_plans.py
supabase/: README.md  config.toml  seed.sql
supabase/migrations/: 20260107192338_create_initial_schema.sql  20260109172456_add_user_ownership_and_rls.sql  20260118103508_tighten_rls_and_storage.sql  20260118174310_optimize_rls_policy_auth_calls.sql  20260118175119_add_fathom_storage_bucket.sql  20260123163325_add_job_retry_fields.sql  20260127144801_summaries_rls_via_jobs.sql  20260129114833_add_jobs_progress_fields.sql  20260129144214_add_job_update_notifications.sql  20260130174752_add_transcript_metadata_and_bucket.sql  20260131150736_add_job_create_notifications.sql  20260131150842_remove_job_update_notifications.sql  20260201180843_add_billig_tables.sql  20260202120000_add_job_duration_seconds.sql  20260210195000_refactor_billing_to_polar.sql  20260215185405_billing_orders_refund_amount_le_paid_amount.sql  20260316190500_allow_deleted_job_status.sql  20260419120000_add_api_rate_limit_buckets.sql  20260517161435_add_job_events.sql
(+17 files in other folders)
