[project]
name = "fathom"
version = "0.4.0"
description = "Podcast-to-PDF MVP service"
readme = "README.md"
# Why: some compiled dependencies (e.g. pydantic-core via PyO3) may not support Python 3.14 yet.
# Pinning prevents uv/pyenv from selecting an interpreter that can't build/install wheels reliably.
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi==0.125.0",
  "uvicorn==0.39.0",
  "python-dotenv==1.2.1",
  "yt-dlp==2025.12.08",
  "deepgram-sdk==5.3.0",
  "openai==2.14.0",
  "markdown==3.10",
  "weasyprint==67.0",
  "pydantic==2.12.5",
  "supabase==2.27.1",
  "pydantic-settings==2.12.0",
]

[dependency-groups]
dev = [
  # Lint/format
  "ruff==0.14.10",
  # Type-checking
  "mypy==1.19.0",
  # Type-checking (fast, informational for now)
  "ty==0.0.8",
  # Git hooks runner
  "pre-commit==4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Why: hatchling can't infer what to package because the importable package is `app/`
# but the distribution name is `fathom`. Explicitly tell hatchling what to ship.
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "README.md", "AGENTS.md", "pyproject.toml"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["data", "playground"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
pretty = true
plugins = ["pydantic.mypy"]

disable_error_code = ["import-untyped"]
