[project]
name = "fathom"
version = "0.16.4"
description = "Podcast-to-PDF MVP service"
readme = "README.md"
# Why: some compiled dependencies (e.g. pydantic-core via PyO3) may not support Python 3.14 yet.
# Pinning prevents uv/pyenv from selecting an interpreter that can't build/install wheels reliably.
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi==0.125.0",
  "uvicorn==0.39.0",
  "python-dotenv==1.2.1",
  "openai==2.14.0",
  "markdown==3.10",
  "weasyprint==68.0",
  "pydantic==2.12.5",
  "supabase==2.27.1",
  "pyjwt==2.12.1",
  "pydantic-settings==2.12.0",
  "asyncpg==0.30.0",
  "debugpy>=1.8.19",
  "groq>=1.0.0",
  "pytubefix>=10.3.6",
]

[dependency-groups]
dev = [
  # Lint/format
  "ruff==0.14.10",
  # Type-checking
  "ty==0.0.8",
  # Git hooks runner
  "pre-commit==4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Why: backend packages live under apps/backend; sources maps that prefix so the wheel contains `fathom`.
packages = ["apps/backend/fathom"]

[tool.hatch.build.targets.wheel.sources]
# Map apps/backend to root so that apps/backend/fathom is distributed as fathom.
"apps/backend" = ""

[tool.hatch.build.targets.sdist]
include = ["apps/backend", "README.md", "AGENTS.md", "pyproject.toml"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["data", "playground"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["fathom"]

[tool.ty.environment]
root = ["apps/backend"]

[tool.ty.terminal]
error-on-warning = false

[tool.ty.src]
respect-ignore-files = true

[tool.ty.rules]
invalid-argument-type = "error"
invalid-return-type = "error"
missing-argument = "error"
unknown-argument = "error"
unresolved-reference = "error"
